--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_scrolling_movie">ScrollingMovieActivity</string>
     <string name="info">《神探夏洛克》（Sherlock）2016年推出特别篇，福尔摩斯回归原著维多利亚时代，调查一宗神秘的幽灵新娘谋杀案。Thomas Ricoletti惊讶地发现，几小时前自杀身亡的妻子Emelia Ricoletti身着旧婚纱再次出现了，她的幽灵带着强烈的复仇欲望在街上徘徊。从迷雾笼罩的莱姆豪斯到被废弃的教堂深处，福尔摩斯、华生以及他们的朋友不得不想尽办法对付这个“从坟墓里爬出来”的敌人，但最终的真相却出乎所有人的意料……</string>
+    <string name="title_activity_wei_ping_reply">WeiPingReplyActivity</string>
 </resources>
